--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="./styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luna Portfolio</title>
+    <title>Hi! im Luna</title>
 </head>
 <body>
     <main>
         <section class="glass">
             <div class="container">
                 <div class="profile">
-                    <img src="./images/profile2.jpg">
+                    <img src="./images/profile3.jpg">
                 </div>
                 <div class="name">
                     <center><h1>Luna Espindola</h1></center>
