--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi! im Luna</title>
-    <link rel="icon" href="./images/Moon.ico" />
+    <link rel="shortcut icon" href="./images/Moon.png" type="image/x-icon"> 
 </head>
 <body>
     <main>
