Changed picture and deleted a clone

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="glass">
             <div class="container">
                 <div class="profile">
-                    <img src="./images/profile3.jpg">
+                    <img src="./images/profile.jpg">
                 </div>
                 <div class="name">
                     <center><h1>Luna Espindola</h1></center>
