Updated with some proyects

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="./styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi! im Luna</title>
+    <title>Hi! Im Luna</title>
     <link rel="shortcut icon" href="./images/Moon.png" type="image/x-icon"> 
 </head>
 <body>
@@ -24,6 +24,11 @@
                 <div class="social">
                     <a href="https://www.linkedin.com/in/luna-espindola/"><i class="uil uil-linkedin"></i></a>
                     <a href="https://github.com/AlanGallegosEsp"> <i class="uil uil-github"></i></a>
+                </div>
+                <center><p>Here are some of my projects</p></center>
+                <div class="projects">
+                    <a href="https://github.com/AlanGallegosEsp/PythonMesa/tree/main/Reto"> <i class="uil uil-robot"></i> </a>
+                    <a href="https://github.com/AlanGallegosEsp/NAWEB2022"> <i class="uil uil-browser"></i> </a>
                 </div>
             </div>
         </section>
